--- a/app/templates/session/username.html
+++ b/app/templates/session/username.html
@@ -11,8 +11,8 @@
     not the name of your player's character.
     For example, your username could be tom123
     while the main character you play might be named "Thunderfist Joe".</p>
-    <p>As with many places on the internet,
-    it's best to avoid giving personal information.</p>
+    <p>If you're playing this game on the internet instead of a LAN,
+    then it's best to avoid giving personal information.</p>
     <form method="POST" action="{{ url_for('set_username') }}">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
